--- a/src/styles/PostItem.css
+++ b/src/styles/PostItem.css
@@ -5,10 +5,5 @@
   margin-top: 15px;
   justify-content: space-between;
   align-items: center;
-}
-
-.post-content {
-}
-
-.post-btns {
+  border-radius: 8px;
 }
